--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -17,6 +17,17 @@
     
 }
 
+.link1 {
+    color: white;
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    /* text-shadow: 2px 2px black; */
+   margin-left: 12px;
+   margin-right: 12px;
+    
+}
+
 
 .dropdown-menu{
     background-color: #3f413f;
